; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/sdhci/extr_sdhci.c_sdhci_card_poll.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/sdhci/extr_sdhci.c_sdhci_card_poll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sdhci_slot = type { i32, i32 }

@SDHCI_CARD_PRESENT_TICKS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @sdhci_card_poll to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sdhci_card_poll(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.sdhci_slot*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.sdhci_slot*
  store %struct.sdhci_slot* %5, %struct.sdhci_slot** %3, align 8
  %6 = load %struct.sdhci_slot*, %struct.sdhci_slot** %3, align 8
  %7 = load %struct.sdhci_slot*, %struct.sdhci_slot** %3, align 8
  %8 = getelementptr inbounds %struct.sdhci_slot, %struct.sdhci_slot* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.sdhci_slot*, %struct.sdhci_slot** %3, align 8
  %11 = call i32 @SDHCI_GET_CARD_PRESENT(i32 %9, %struct.sdhci_slot* %10)
  %12 = call i32 @sdhci_handle_card_present(%struct.sdhci_slot* %6, i32 %11)
  %13 = load %struct.sdhci_slot*, %struct.sdhci_slot** %3, align 8
  %14 = getelementptr inbounds %struct.sdhci_slot, %struct.sdhci_slot* %13, i32 0, i32 0
  %15 = load i32, i32* @SDHCI_CARD_PRESENT_TICKS, align 4
  %16 = load %struct.sdhci_slot*, %struct.sdhci_slot** %3, align 8
  %17 = call i32 @callout_reset(i32* %14, i32 %15, void (i8*)* @sdhci_card_poll, %struct.sdhci_slot* %16)
  ret void
}

declare dso_local i32 @sdhci_handle_card_present(%struct.sdhci_slot*, i32) #1

declare dso_local i32 @SDHCI_GET_CARD_PRESENT(i32, %struct.sdhci_slot*) #1

declare dso_local i32 @callout_reset(i32*, i32, void (i8*)*, %struct.sdhci_slot*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
